# Book-store-management-

./: CMakeLists.txt
src/: main.c
src/book/: book.c  book.h
src/customer/: customer.c  customer.h  customer_menu.c
src/sales/: sales.c  sales.h
